--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
     <name>Task5</name>
     <description>Task5</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
